--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.6.2",
+    "apollo-server-express": "^2.19.0",
     "bcrypt": "^4.0.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
